  masking all errors.

- Issue #10391: Don't dereference invalid memory in error messages in the ast
  module.

- Issue #9518: Extend the PyModuleDef_HEAD_INIT macro to explicitly
  zero-initialize all fields, fixing compiler warnings seen when building
  extension modules with gcc with "-Wmissing-field-initializers" (implied
  by "-W")

Library
-------

- Issue #9299: Add exist_ok parameter to os.makedirs to suppress the
  'File exists' exception when a target directory already exists with the
  specified mode. Patch by Ray Allen.

- Issue #9573: os.fork() now works correctly when triggered as a side effect
  of a module import

- Issue #10464: netrc now correctly handles lines with embedded '#' characters.

- Added itertools.accumulate().

- Issue #4113: Added custom ``__repr__`` method to ``functools.partial``.
  Original patch by Daniel Urban.

- Issue #10273: Rename `assertRegexpMatches` and `assertRaisesRegexp` to
  `assertRegex` and `assertRaisesRegex`.

- Issue #10535: Enable silenced warnings in unittest by default.

- Issue #9873: The URL parsing functions in urllib.parse now accept
  ASCII byte sequences as input in addition to character strings.

- Issue #10586: The statistics API for the new functools.lru_cache has
  been changed to a single cache_info() method returning a named tuple.

- Issue #10323: itertools.islice() now consumes the minimum number of
  inputs before stopping.  Formerly, the final state of the underlying
  iterator was undefined.

- Issue #10565: The collections.Iterator ABC now checks for both
  __iter__ and __next__.

- Issue #10242: Fixed implementation of unittest.ItemsEqual and gave it
  a new more informative name, unittest.CountEqual.

- Issue #10561: In pdb, clear the breakpoints by the breakpoint number.

- Issue #2986: difflib.SequenceMatcher gets a new parameter, autojunk, which
  can be set to False to turn off the previously undocumented 'popularity'
  heuristic. Patch by Terry Reedy and Eli Bendersky.
